# teamt5-homework

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt
app/: bus_reminder_job.py  config.py  dependencies.py  main.py
app/application/port/: bus_api_client_port.py  email_service_port.py
app/application/service/: bus_factory.py  bus_service.py
app/application/usecase/: bus_usecase.py
app/domain/: bus_realtime_near_stop_vo.py  bus_reminder_entity.py  bus_reminder_repository.py  bus_stop_entity.py
app/infrastructure/: database.py  scheduler.py
app/infrastructure/adapters/: smtp_email_service_adapter.py  tdx_bus_api_client.py
app/infrastructure/adapters/repositories/sqlalchemy/: bus_reminder_repository.py
app/infrastructure/adapters/repositories/sqlalchemy/orm_entity/: bus_reminder_entity.py
app/routers/: bus_router.py
app/schemas/: bus_schema.py  common_schema.py
