[project]
name = "teamt5-homework"
version = "0.1.0"
description = ""
authors = [{ name = "Benny Cheng", email = "benny12628@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "types-requests (>=2.32.0.20250306,<3.0.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "types-pytz (>=2025.1.0.20250204,<2026.0.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pre-commit = "^4.1.0"
mypy = "^1.15.0"

[tool.ruff] # https://docs.astral.sh/ruff/settings/#top-level
line-length = 100
target-version = "py312"
exclude = ["**/migrations/", "**/manage.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.format]  # https://docs.astral.sh/ruff/settings/#format
quote-style = "single"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
